change config file

--- a/glove/config.ini
+++ b/glove/config.ini
@@ -1,4 +1,4 @@
 [PATHS]
-models_dir=/path/to/models/dir
-log_dir=/path/to/log/dir
-data_dir=/path/to/data/dir
+models_dir=/data
+log_dir=/log
+data_dir=/models
